[gd_scene load_steps=28 format=3 uid="uid://d1xk2lv80lqnp"]

[ext_resource type="Script" path="res://src/Scenario/game_manager.gd" id="1_3288w"]
[ext_resource type="Script" path="res://src/Scenario/scenario.gd" id="2_dxbxk"]
[ext_resource type="Texture2D" uid="uid://wpj1dva5gtb7" path="res://assets/Buildings/Fortress.png" id="3_0hn5p"]
[ext_resource type="Script" path="res://src/Scenario/map_terrain.gd" id="3_hkubf"]
[ext_resource type="Script" path="res://src/Scenario/map_regions.gd" id="4_cx5v6"]
[ext_resource type="Script" path="res://src/Scenario/zooming_camera.gd" id="4_j537l"]
[ext_resource type="TileSet" uid="uid://nl4xmhsyw2f6" path="res://src/Scenario/scenario.tres" id="5_mdv1s"]
[ext_resource type="Script" path="res://src/Logic/finite_state_machine.gd" id="5_v5awv"]
[ext_resource type="Script" path="res://src/Scenario/load_map.gd" id="6_e01md"]
[ext_resource type="Script" path="res://src/Scenario/start_round.gd" id="7_npxgh"]
[ext_resource type="Script" path="res://src/Logic/state.gd" id="7_x2l3a"]
[ext_resource type="Texture2D" uid="uid://6iqsya71utgr" path="res://assets/Background/background_wood.png" id="12_7xjhs"]
[ext_resource type="Script" path="res://src/UI/ScenarioOverlay/scenario_overlay.gd" id="12_tdvrh"]
[ext_resource type="Theme" uid="uid://dkyvmh7wb1ijq" path="res://src/UI/ScenarioOverlayNew/Sonstiges/new_theme.tres" id="14_agmyj"]
[ext_resource type="Texture2D" uid="uid://38ccf3vgryl6" path="res://src/UI/ScenarioOverlayNew/Sonstiges/stone.jpg" id="15_le026"]
[ext_resource type="Texture2D" uid="uid://chw2nbcqgmwms" path="res://src/UI/ScenarioOverlayNew/Sonstiges/wood.jpg" id="16_eaano"]
[ext_resource type="Texture2D" uid="uid://bpefnmbs5s25u" path="res://src/UI/ScenarioOverlayNew/Sonstiges/metal.jpg" id="17_rqe8m"]
[ext_resource type="Texture2D" uid="uid://btssvilv8sp70" path="res://src/UI/ScenarioOverlayNew/Sonstiges/food.jpg" id="18_suoxv"]
[ext_resource type="Script" path="res://src/UI/ScenarioOverlayNew/PanelContainerTroops.gd" id="19_o6ma8"]
[ext_resource type="Texture2D" uid="uid://bc60ql6gst4sg" path="res://src/UI/ScenarioOverlayNew/Sonstiges/weapon03longsword.png" id="20_qgfvj"]
[ext_resource type="Script" path="res://src/UI/ScenarioOverlayNew/SwordLabel.gd" id="21_xv7p5"]
[ext_resource type="Texture2D" uid="uid://b1iqbbo6q0qp4" path="res://src/UI/ScenarioOverlayNew/Sonstiges/weapon06bow.png" id="22_0f5iu"]
[ext_resource type="Texture2D" uid="uid://cn6rd5q8grbu0" path="res://src/UI/ScenarioOverlayNew/Sonstiges/armour05platemail.png" id="23_tledy"]
[ext_resource type="Theme" uid="uid://wnalh3p5w45g" path="res://src/UI/ScenarioOverlayNew/Sonstiges/timer_theme.tres" id="24_piu74"]
[ext_resource type="Theme" uid="uid://dqug3skhyxlkp" path="res://src/UI/ScenarioOverlayNew/Sonstiges/gebiet_theme.tres" id="25_qooc4"]
[ext_resource type="FontFile" uid="uid://cqtlnoqxokx35" path="res://src/UI/ScenarioOverlayNew/UIFont/fonts/linux-libertine/LinLibertine_5.3.0_2012_07_02/LinLibertineOTF_5.3.0_2012_07_02/LinLibertine_RB.otf" id="26_5ckp3"]
[ext_resource type="Script" path="res://src/Scenario/GebietsnameInputLabel.gd" id="27_ehgdi"]

[node name="GameManager" type="Node2D"]
process_mode = 3
script = ExtResource("1_3288w")

[node name="Scenario" type="Node2D" parent="."]
process_mode = 1
script = ExtResource("2_dxbxk")

[node name="FiniteStateMachine" type="Node" parent="Scenario"]
script = ExtResource("5_v5awv")

[node name="LoadMap" type="Node" parent="Scenario/FiniteStateMachine" node_paths=PackedStringArray("map_image")]
script = ExtResource("6_e01md")
map_image = NodePath("../../MapRegions")

[node name="StartRound" type="Node" parent="Scenario/FiniteStateMachine"]
script = ExtResource("7_npxgh")

[node name="ActionPoints" type="Node" parent="Scenario/FiniteStateMachine"]
script = ExtResource("7_x2l3a")

[node name="Battle" type="Node" parent="Scenario/FiniteStateMachine"]
script = ExtResource("7_x2l3a")

[node name="Label" type="Label" parent="Scenario/FiniteStateMachine"]
offset_right = 40.0
offset_bottom = 23.0

[node name="TestSprite" type="Sprite2D" parent="Scenario"]
z_index = 2
texture_filter = 1
position = Vector2(239, 703)
texture = ExtResource("3_0hn5p")

[node name="MapRegions" type="Sprite2D" parent="Scenario"]
z_index = -1
centered = false
script = ExtResource("4_cx5v6")

[node name="MapTerrain" type="Sprite2D" parent="Scenario"]
z_index = 1
centered = false
script = ExtResource("3_hkubf")

[node name="TileMap" type="TileMap" parent="Scenario"]
z_index = 1
texture_filter = 1
tile_set = ExtResource("5_mdv1s")
format = 2

[node name="Buildings" type="Node2D" parent="Scenario"]

[node name="Regions" type="Node2D" parent="Scenario"]
z_index = 1

[node name="Camera" type="Camera2D" parent="Scenario"]
offset = Vector2(60, 170)
zoom = Vector2(3, 3)
limit_left = -30
limit_top = -30
limit_right = 600
limit_bottom = 700
script = ExtResource("4_j537l")

[node name="CanvasLayer" type="CanvasLayer" parent="Scenario"]
layer = 0

[node name="ParallaxBackground" type="ParallaxBackground" parent="Scenario/CanvasLayer"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Scenario/CanvasLayer/ParallaxBackground"]

[node name="BackgroundSprite" type="Sprite2D" parent="Scenario/CanvasLayer/ParallaxBackground/ParallaxLayer"]
position = Vector2(449, 604)
texture = ExtResource("12_7xjhs")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 3
visible = false
follow_viewport_enabled = true

[node name="ScenarioOverlay" type="Control" parent="CanvasLayer2"]
z_index = 3
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("12_tdvrh")

[node name="CanvasLayer" type="CanvasLayer" parent="CanvasLayer2/ScenarioOverlay"]
follow_viewport_enabled = true

[node name="PanelContainerRessources" type="PanelContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -440.0
offset_top = 3.0
offset_right = 153.0
offset_bottom = 100.0
grow_horizontal = 0
scale = Vector2(0.75, 0.75)
size_flags_horizontal = 0
theme = ExtResource("14_agmyj")

[node name="GridContainer" type="GridContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerRessources"]
layout_mode = 2
columns = 8

[node name="StoneIcon" type="TextureRect" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerRessources/GridContainer"]
layout_mode = 2
texture = ExtResource("15_le026")
expand_mode = 2
stretch_mode = 5

[node name="MarginStone" type="MarginContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerRessources/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 30

[node name="StoneLabel" type="Label" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerRessources/GridContainer/MarginStone"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "100"
horizontal_alignment = 1

[node name="WoodIcon" type="TextureRect" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerRessources/GridContainer"]
layout_mode = 2
texture = ExtResource("16_eaano")
expand_mode = 2
stretch_mode = 5

[node name="MarginWood" type="MarginContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerRessources/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 30

[node name="WoodLabel" type="Label" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerRessources/GridContainer/MarginWood"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "100"
horizontal_alignment = 1

[node name="MetalIcon" type="TextureRect" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerRessources/GridContainer"]
layout_mode = 2
texture = ExtResource("17_rqe8m")
expand_mode = 2
stretch_mode = 5

[node name="MarginMetal" type="MarginContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerRessources/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 30

[node name="MetalLabel" type="Label" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerRessources/GridContainer/MarginMetal"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "100"
horizontal_alignment = 1

[node name="FoodIcon" type="TextureRect" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerRessources/GridContainer"]
layout_mode = 2
texture = ExtResource("18_suoxv")
expand_mode = 2
stretch_mode = 5

[node name="MarginFood" type="MarginContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerRessources/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 30

[node name="FoodLabel" type="Label" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerRessources/GridContainer/MarginFood"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "100"
horizontal_alignment = 1

[node name="PanelContainerTroops" type="PanelContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer"]
offset_right = 465.0
offset_bottom = 103.0
scale = Vector2(0.75, 0.75)
size_flags_horizontal = 0
theme = ExtResource("14_agmyj")
script = ExtResource("19_o6ma8")

[node name="GridContainer" type="GridContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerTroops"]
layout_mode = 2
size_flags_horizontal = 0
columns = 6

[node name="SwordIcon" type="TextureRect" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerTroops/GridContainer"]
layout_mode = 2
texture = ExtResource("20_qgfvj")
expand_mode = 2
stretch_mode = 5

[node name="MarginSword" type="MarginContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerTroops/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 30

[node name="SwordLabel" type="Label" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerTroops/GridContainer/MarginSword"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "100"
horizontal_alignment = 1
script = ExtResource("21_xv7p5")

[node name="BowIcon" type="TextureRect" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerTroops/GridContainer"]
layout_mode = 2
texture = ExtResource("22_0f5iu")
expand_mode = 2
stretch_mode = 5

[node name="MarginBow" type="MarginContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerTroops/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 30

[node name="BowLabel" type="Label" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerTroops/GridContainer/MarginBow"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "100"
horizontal_alignment = 1

[node name="ArmorIcon" type="TextureRect" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerTroops/GridContainer"]
layout_mode = 2
texture = ExtResource("23_tledy")
expand_mode = 2
stretch_mode = 5

[node name="MarginArmor" type="MarginContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerTroops/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 30

[node name="ArmorLabel" type="Label" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerTroops/GridContainer/MarginArmor"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "100"
horizontal_alignment = 1

[node name="PanelContainerInfo" type="PanelContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -140.0
offset_top = -1.0
offset_right = 134.0
offset_bottom = 137.0
grow_horizontal = 2
scale = Vector2(0.75, 0.75)
theme = ExtResource("14_agmyj")

[node name="GridContainer" type="GridContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerInfo"]
layout_mode = 2
size_flags_horizontal = 0

[node name="MarginSpielerInfo" type="MarginContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerInfo/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 30

[node name="SpielerinfoLabel" type="Label" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerInfo/GridContainer/MarginSpielerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Spieler X"
horizontal_alignment = 1

[node name="MarginZug" type="MarginContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerInfo/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 30

[node name="ZugLabel" type="Label" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerInfo/GridContainer/MarginZug"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Ist am Zug"
horizontal_alignment = 1

[node name="PanelContainerTimer" type="PanelContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -101.0
offset_top = 83.0
offset_right = 71.0
offset_bottom = 150.0
grow_horizontal = 2
scale = Vector2(0.75, 0.75)
theme = ExtResource("24_piu74")

[node name="GridContainer" type="GridContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerTimer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SpielerTimerInfoLabel" type="Label" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerTimer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "1:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainerGebiet" type="PanelContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -344.0
offset_top = -190.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.6, 0.6)
size_flags_horizontal = 0
theme = ExtResource("25_qooc4")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerGebiet"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerGebiet/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("26_5ckp3")
theme_override_font_sizes/font_size = 35
text = "Gebietsinfo"

[node name="GridContainer" type="GridContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerGebiet/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="MarginGebietsname" type="MarginContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerGebiet/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_right = 30

[node name="GebietsnameLabel" type="Label" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerGebiet/VBoxContainer/GridContainer/MarginGebietsname"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Name:"

[node name="MarginGebietsnameInput" type="MarginContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerGebiet/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 10

[node name="GebietsnameInputLabel" type="Label" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerGebiet/VBoxContainer/GridContainer/MarginGebietsnameInput"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "NameInput"
script = ExtResource("27_ehgdi")

[node name="MarginGebietsressourcen" type="MarginContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerGebiet/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="GebietsressourcenLabel" type="Label" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerGebiet/VBoxContainer/GridContainer/MarginGebietsressourcen"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Ressourcen:"
horizontal_alignment = 1

[node name="MarginGebietsressourcenInput" type="MarginContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerGebiet/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 10

[node name="GebietsressourcenInputLabel" type="Label" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerGebiet/VBoxContainer/GridContainer/MarginGebietsressourcenInput"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RessourcenInput"

[node name="MarginGebietstruppen" type="MarginContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerGebiet/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="GebietstruppenLabel" type="Label" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerGebiet/VBoxContainer/GridContainer/MarginGebietstruppen"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Truppen:"

[node name="MarginGebietstruppenInput" type="MarginContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerGebiet/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 10

[node name="GebietstruppenInputLabel" type="Label" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerGebiet/VBoxContainer/GridContainer/MarginGebietstruppenInput"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "TruppenInput"

[node name="MarginGebietsgebaeude" type="MarginContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerGebiet/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="GebietsgebaeudeLabel" type="Label" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerGebiet/VBoxContainer/GridContainer/MarginGebietsgebaeude"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Gebäude:"

[node name="MarginGebietsgebaeudeInput" type="MarginContainer" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerGebiet/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="GebietsgebaeudeInputLabel" type="Label" parent="CanvasLayer2/ScenarioOverlay/CanvasLayer/PanelContainerGebiet/VBoxContainer/GridContainer/MarginGebietsgebaeudeInput"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GebäudeInput"
